Fix the about page on tablet

--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -1,3 +1,7 @@
-.about {
-  height: 100vh;
+@media only screen and (min-width: 60em) {
+
+  .about {
+    height: 100vh;
+  }
+
 }
